[package]
name = "blocking"
version = "0.1.0"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
warp = { version = "0.3", default-features = false }
futures = "0.3"
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2"
reqwest="0.11"